# H1B-Sponsor-MCP

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DATA.md  LICENSE  NOTICE.md  README.md  SECURITY.md  SUPPORT.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml
src/h1b_mcp/: __init__.py  data.py  server.py  validation.py
tests/: test_data.py  test_server.py  test_validation.py
