[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "h1b-sponsor-mcp"
version = "1.0.0"
description = "MCP server for querying USCIS H-1B sponsoring employers (FY2009-FY2026)"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [{ name = "h1b-sponsor-mcp contributors" }]
keywords = ["mcp", "h1b", "visa", "uscis", "immigration", "model-context-protocol"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = [
    "mcp>=1.2.0,<2.0",
    "pandas>=2.0,<3.0",
    "pyarrow>=14.0,<20.0",
    "numpy>=1.24,<3.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.4"]

[project.scripts]
h1b-sponsor-mcp = "h1b_mcp.server:main"

[project.urls]
Homepage = "https://github.com/ujjwalredd/H1B-Sponsor-MCP"
Repository = "https://github.com/ujjwalredd/H1B-Sponsor-MCP.git"
Issues = "https://github.com/ujjwalredd/H1B-Sponsor-MCP/issues"
Security = "https://github.com/ujjwalredd/H1B-Sponsor-MCP/security/advisories/new"
"Data Source" = "https://www.uscis.gov/tools/reports-and-studies/h-1b-employer-data-hub"

[tool.hatch.build.targets.wheel]
packages = ["src/h1b_mcp"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes (unused imports, undefined names)
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "S",   # flake8-bandit (security)
    "RUF", # ruff-specific rules
]
ignore = [
    "S101",  # assert used in tests
    "B904",  # raise-without-from-in-except — handled intentionally in _guarded
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]

[tool.pytest.ini_options]
testpaths = ["tests"]
